# parking

./: .gitignore  Makefile  board.c  board.h  main.c  main.elf  main.hex  servo.c  servo.h  stepper.c  stepper.h  uart.h
cam_ctrl/: .gitignore  do.sh  do2.sh  driver  envioFotos.sh  face_client
cam_ctrl/ssh/: id_rsa  id_rsa.pub  known_hosts
detect_av/: Parking.cpp  Parking.h
driver/: Makefile  driver  driver.c  driver.h
face_ctrl/: control_client  detect.py  do.sh
facews/: LICENSE  README.md  face_client  facews.cabal
facews/.stack-work/install/x86_64-linux-nopie/lts-11.15/8.2.2/flag-cache/: Cabal-2.0.1.1-ARIl7MGNKZFBAH1HVzpC6s  aeson-1.2.4.0-JAab86GLdBJCQly9tYLEGk  ansi-terminal-0.8.0.4-H5HxnxNyY9rFpSVgr55Piv  ansi-wl-pprint-0.6.8.2-9xuhzBw0sxT3GcMo3MQQvg  appar-0.1.4-4hjiMZCExd3CrJSMoeXviI  async-2.1.1.1-K429Y4XjamzDpSomhW85Gx  attoparsec-0.13.2.2-4OZxs7pjlk4KaC70yK831H  attoparsec-iso8601-1.0.0.0-4vvtgSRGfFY1WhuuvuXB4R  auto-update-0.1.4-DRogbfFYNQeJCAE3NJ8IZH  base-compat-0.9.3-915GC5pH10BBmcMnCvMsPA  base64-bytestring-1.0.0.1-8MlzMz2YH3lCqJ4GOwL1Be  basement-0.0.7-IRcTCDmYoctGxt4FUYqdQc  blaze-builder-0.4.1.0-BFOenXCaiVr8U0JVhwUfLi  blaze-html-0.9.1.1-5LOxfasIqs591iBwJOEgjX  blaze-markup-0.8.2.1-GNcNOIjy5FnGWh7cI9G2el  bsb-http-chunked-0.0.0.2-H3ktYq6qdL78zDrB20Wed  byteorder-1.0.4-C3RUhEkbWDI7bhRvbw5CmU  bytestring-builder-0.10.8.1.0-EDQdR3R0EemEMKmDJYWM6n  cabal-doctest-1.0.6-K34z9qJFa9S9lhohNycUoO  case-insensitive-1.2.0.11-DieXAizupZnBb7Wfxln47O  colour-2.3.4-3MiiEznBxpfEYrMTHbnSer  cookie-0.4.4-IH6paS8rvPqCsK3tedBbTe  cryptonite-0.25-62KWfqjG1f38Ag9mk6p5ih  data-default-class-0.1.2.0-8hmGYd6GPAfLQPQcWKOjRm  dlist-0.8.0.4-C5jxmU4NyxKI1pN7pAcXnu  easy-file-0.2.2-ACg7EfD6Bid72bXoAqasoR  exceptions-0.8.3-CYMTujxEbkkJnOJ7pW82ZD  facews-0.1.0.0-AXSnNi41CBCKwTszBtB6VE  facews-0.1.0.0-IunwoIdAKHe32CFEQXgNNy  fast-logger-2.4.11-7IAnTV0EQhV4J0oytXAXQa  file-embed-0.0.10.1-dHJWrXRvu59h2yyMVhlwG  foundation-0.0.20-HOitMdSXh1H2RFYoixhqVb  hashable-1.2.7.0-LmYYwdRyxeo1gZdEWccp3y  http-api-data-0.3.7.2-67exoslPfeKE0b0SDkYiZs  http-date-0.0.7-9unJXE2a40e3VcD4xkqYpe  http-media-0.7.1.2-H3PCoscwMlAFNeLavowtUx  http-types-0.12.1-20NLDWrYorfCy3zUNrIMsI  http2-1.6.3-GKWQo5tfxL54Q9IWYRXal8  integer-logarithms-1.0.2.1-KAhnLbvomfTHb5G0xy3U7G  iproute-1.7.5-7YO0Ezec1vYBGs0XsPSn3g  (+55 more)
facews/.stack-work/install/x86_64-linux-nopie/lts-11.15/8.2.2/lib/x86_64-linux-ghc-8.2.2/facews-0.1.0.0-AXSnNi41CBCKwTszBtB6VE/: Lib.dyn_hi  Lib.hi
facews/.stack-work/install/x86_64-linux-nopie/lts-11.15/8.2.2/lib/x86_64-linux-ghc-8.2.2/facews-0.1.0.0-GNS5Olg5Cd2KyTIWAeiBcI/: Lib.dyn_hi
facews/.stack-work/install/x86_64-linux-nopie/lts-11.15/8.2.2/lib/x86_64-linux-ghc-8.2.2/facews-0.1.0.0-IunwoIdAKHe32CFEQXgNNy/: Lib.dyn_hi  Lib.hi
facews/.stack-work/install/x86_64-linux-nopie/lts-11.15/8.2.2/pkgdb/: facews-0.1.0.0-GNS5Olg5Cd2KyTIWAeiBcI.conf  package.cache
facews/clients/: control_client  face_client  face_client_simple
facews/src/: Lib.hs
facews/test/: Spec.hs
finishws/: finishws.cabal
finishws/clients/: control_client
finishws/src/: Lib.hs
firmware/: command.h  main.c  servo.c  servo.h  stepper.c  stepper.h  uart.c
gui/: Makefile  gui  gui.c
uparking/: package.json
uparking/app/: app.css  main-page.css  main-page.js  main-page.xml
uparking/app/App_Resources/Android/: app.gradle
uparking/app/App_Resources/Android/drawable-nodpi/: splash_screen.xml
uparking/app/shared/: config.js  parking-view-model.js
uparking/art-work/: Makefile  background.xcf
webserv/: .gitignore  README.md  data.sql  deploy.sh  package.yaml  webserv.cabal
webserv/app/: devel.hs
webserv/config/: keter.yml  settings.yml  test-settings.yml
webserv/src/: Api.hs  App.hs  Models.hs
