name:                facews
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alx741/facews#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Campoverde
maintainer:          alx@sillybytes.net
copyright:           2018 Daniel Campoverde
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , stm
                     , transformers
  default-language:    Haskell2010

executable facews-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , facews
  default-language:    Haskell2010

test-suite facews-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , facews
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alx741/facews
