name:                webserv
version:             0.1.0.0
synopsis:            Parking Web Service
description:         Parking Web Service
license:             BSD3
license-file:        LICENSE
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable webserv
  main-is:             Main.hs
  other-modules:       Api
                     , App
                     , Models
  build-depends:       base >=4.8 && <4.11
                     , aeson
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , persistent-mysql
                     , servant
                     , servant-server
                     , string-conversions
                     , text
                     , transformers
                     , wai
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:      test
                     , src
  other-modules:       Api
                     , App
                     , Models
                     , AppSpec
  build-depends:       base >=4.8 && <4.11
                     , hspec
                     , aeson
                     , persistent
                     , monad-logger
                     , persistent-template
                     , persistent-sqlite
                     , persistent-mysql
                     , transformers
                     , wai
                     , servant
                     , servant-client
                     , servant-server
                     , string-conversions
                     , warp
                     , http-client
                     , text
                     , mockery
  default-language:    Haskell2010
